cros: Call OnAfterCaptivePortalHidden only after widget is destroyed

This CL fixes the case where displaying the captive portal view and then
closing it would break the Gaia screen email input, preventing users from
typing into the box.

Bug: 881498
Change-Id: Id79795566fbb4355be7954edc34929ee4cccd524
Reviewed-on: https://chromium-review.googlesource.com/1222314
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591386}