chrome/browser/chromeos/login/ui/captive_portal_window_proxy.h
@@ -84,8 +84,6 @@ class CaptivePortalWindowProxy : public views::WidgetObserver {
   void RemoveObserver(Observer* observer);
 
   // Overridden from views::WidgetObserver:
-  void OnWidgetClosing(views::Widget* widget) override;
-  void OnWidgetDestroying(views::Widget* widget) override;
   void OnWidgetDestroyed(views::Widget* widget) override;
 
  private:
