chrome/browser/chromeos/login/ui/captive_portal_window_browsertest.cc
@@ -104,6 +104,8 @@ IN_PROC_BROWSER_TEST_F(CaptivePortalWindowTest, ShowClose) {
   CheckState(true, 0);
 
   Close();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 0);
 }
 
@@ -117,6 +119,8 @@ IN_PROC_BROWSER_TEST_F(CaptivePortalWindowTest, OnRedirected) {
   CheckState(true, 1);
 
   Close();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 1);
 }
 
@@ -130,6 +134,8 @@ IN_PROC_BROWSER_TEST_F(CaptivePortalWindowTest, OnOriginalURLLoaded) {
   CheckState(true, 1);
 
   OnOriginalURLLoaded();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 1);
 }
 
@@ -143,12 +149,16 @@ IN_PROC_BROWSER_TEST_F(CaptivePortalWindowTest, MultipleCalls) {
   CheckState(true, 0);
 
   Close();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 0);
 
   OnRedirected();
   CheckState(false, 1);
 
   OnOriginalURLLoaded();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 1);
 
   Show();
@@ -158,6 +168,8 @@ IN_PROC_BROWSER_TEST_F(CaptivePortalWindowTest, MultipleCalls) {
   CheckState(true, 2);
 
   Close();
+  // Wait for widget to be destroyed
+  base::RunLoop().RunUntilIdle();
   CheckState(false, 2);
 
   OnOriginalURLLoaded();
